# gktuition-tutor-engine

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  requirements-local.txt
.github/workflows/: ci.yml  content-sync.yml  scheduled_eval.yml  smoke_canonical_queries.yml
api/: README.md  __init__.py  main.py  pyproject.toml
api/adr/: ADR-004-section-image-path.md
api/auth/: __init__.py  jwt.py
api/firewall/: L1_turnstile.py  L2_rate_limit.py  L3_semantic_cache.py  L4_router.py  L5_kill_switch.py  L6_tracing.py  __init__.py  _log.py  anthropic_pricing.yaml  anti_spam_decisions.md  bot_user_agents.txt  settings.py  spend_cap_rationale.md  wire.py
api/models/: image_query.py
api/observability/: __init__.py  snowflake_log_sink.py
api/orchestrator/: __init__.py  classifier.py  contract.py  exam_refs.py  query_rewrite.py  retriever.py  synthesizer.py  voice_anchor.py
api/prompts/: extract_maths_question_from_image.md
api/prompts/extract_maths_question_from_image.fixtures/: 01_textbook_screenshot.expected.json  02_handwritten_homework.expected.json  03_no_maths_image.expected.json  README.md
api/routes/: health.py  image_query.py  query.py
api/services/: auth.py  query_log.py  query_pipeline.py  vision_extraction.py
api/sql/: firewall_tables.sql  query_log_table.sql
api/tests/: conftest.py  test_classifier.py  test_eval_regression.py  test_image_query.py  test_query_e2e.py  test_query_rewrite.py  test_query_rewrite_fallback.py  test_query_stream.py  test_retriever.py  test_score_xref_rule.py  test_slug_anchor_override.py  test_synthesizer.py  test_voice_anchor.py
api/tests/firewall/: conftest.py  test_L1_turnstile.py  test_L2_rate_limit.py  test_L3_semantic_cache.py  test_L4_router.py  test_L5_kill_switch.py  test_L6_tracing.py  test_e2e_smoke.py
api/tests/integration/: test_jwt_round_trip.py
api/tests/observability/: test_snowflake_log_sink.py
api/visualisation/: __init__.py  generators.py  synthesizer_extension.py
api/visualisation/tests/: test_generators.py  test_synthesizer_extension.py
content-pipeline/docs/: content-pipeline-handbook.md  loader-code-change-runbook.md
content-pipeline/sync/: bootstrap_content_change_log.sql  detect_changes.py  refresh_cortex.py  run_loaders.py
content-pipeline/validators/: pre-commit-hook.sh  yaml_frontmatter.py
corpus/: exam_appearances.json
corpus/tutorials/: _voice.md
dags/: audio_utils.py  ingestion_dag.py
docs/: CORPUS_EDIT_PLAYBOOK.md  QUALITY_TESTING_NOTES.md  REINDEX_SOLUTIONS.md  SNOWFLAKE_EXIT_PHASE0_REPORT.md  SNOWFLAKE_EXIT_PHASE0_REPORT_V2.md  SNOWFLAKE_EXIT_PHASE0_REPORT_V3.md  SNOWFLAKE_EXIT_PHASE0_REPORT_V4.md  SNOWFLAKE_EXIT_PLAN.md
docs/architecture/: ADR-001-vector-store.md  ADR-002-product-model.md  ADR-003-system-architecture.md  ADR-004-retrieval-stays-on-cortex.md  SYSTEM_OVERVIEW.md
docs/design/: ingestion-dag.md
docs/ops/: cold-start-policy.md  runbook.md
eval/: README.md  algebra_failures_DAY_31.md  algebra_tuning_DAY_31.md  bootstrap_eval_table.sql  build_eval_set.py  build_rewrite_cache.py  categorise_phrasings_failures.py  eval_golden_set.csv  floor_recalibration_local.json  inspect_failures.py  parity_harness.py  parity_report_cortex-csv-replay_20260529_115306.json  parity_report_cortex-csv-replay_20260529_131522.json  parity_report_cortex-csv-replay_20260529_155823.json  parity_report_cortex-csv-replay_20260529_160946.json  parity_report_local-arctic-cosine_full_20260529_141443.json  parity_report_local-arctic-cosine_subset_20260529_142527.json  parity_report_local-bge-cosine_full_20260529_142458.json  parity_report_local-bge-cosine_subset_20260529_142526.json  parity_report_local-bm25_full_20260529_141116.json  parity_report_local-bm25_subset_20260529_142528.json  parity_report_local-cosine_full_20260529_125400.json  parity_report_local-cosine_subset_20260529_125400.json  parity_report_local-hybrid-rewrite_full_20260529_150533.json  parity_report_local-hybrid-rewrite_subset_20260529_150533.json  parity_report_local-hybrid_full_20260529_142334.json  parity_report_local-hybrid_full_20260529_142538.json  parity_report_local-hybrid_subset_20260529_142528.json  parity_report_local-reranked_full_20260529_131513.json  parity_report_local-reranked_subset_20260529_130504.json  parity_report_voyage-cosine_full_20260602_163754.json  parity_report_voyage-cosine_full_20260612_085640.json  parity_report_voyage-cosine_subset_20260602_164458.json  parity_report_voyage-hybrid-rerank_full_20260602_163911.json  parity_report_voyage-hybrid-rerank_full_20260612_085643.json  parity_report_voyage-hybrid-rerank_subset_20260602_164615.json  parity_report_voyage-hybrid-rerank_subset_20260602_165404.json  parity_report_voyage-hybrid_full_20260602_163833.json  parity_report_voyage-hybrid_full_20260612_085642.json  parity_report_voyage-hybrid_subset_20260602_164537.json  (+40 more)
eval/cache/: README.md
eval/scoring_history/: .gitkeep
eval/tests/: test_parity_harness.py  test_rewrite_backend.py
examples/: sample-output-truncated.md
local_retrieval/: __init__.py  bm25_index.py  core.py  corpus.py  embedding.py  hosted_rerank.py  hybrid.py  rerank.py  rewrite_backend.py  store.py  voyage_embed.py  voyage_hybrid.py
local_retrieval/tests/: test_hosted_rerank.py  test_hybrid.py  test_local_retrieval.py  test_rerank.py  test_voyage_embed.py
pipelines/spike/: README.md  spike_one_video.py
scripts/: always_warm.py  build_exam_appearances.py  build_local_index.py  manual_ingest.sh  setup_fly_secrets.sh  smoke_canonical_queries.py  sniff_cortex.py  sync_corpus.sh  transcribe_worker.py
snowflake/: README.md  bootstrap_exam_parts_table.sql  bootstrap_summaries_table.sql  bootstrap_tutorials_table.sql  bootstrap_warehouse_and_database.sql  create_solutions_search_service.sql  create_summary_search_service.sql  create_tutor_search_service.sql  load_exam_parts.py  load_summaries.py  load_tutorials.py
snowflake/cortex_analyst/: canonical_queries.md  create_analyst_service.sql  routing_contract.md  (+2 more)
widget/: CONTRACT_NEEDS.md  index.html  package-lock.json  package.json  vite.config.ts
(+49 files in other folders)
